secure browser overflow fix

--- a/client/components/secureBrowser/secure.browser.import.less
+++ b/client/components/secureBrowser/secure.browser.import.less
@@ -77,6 +77,9 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    h1 {
+      font-size: 42px;
+    }
   }
 
   .browser-image-mixin(@image-url) {
